# MqttBroker-SQLite-Flask_minimalist-stack

./: .dockerignore  .gitignore  Dockerfile.flask  Dockerfile.sqlite  README.md  docker-compose.yaml  mosquitto.conf
mesh-temperature-data-flaskapp/: README.md  app.py  config.py  pyproject.toml
mesh-temperature-data-flaskapp/templates/: base.html  devices.html  gateway_readings.html  index.html  readings.html  sensor_temperature_readings.html
posting/: local.env  publish-test.posting.yaml  root.posting.yaml
posting/api/: api-publish.posting.yaml  devices.posting.yaml  gateway-readings-get.posting.yaml  gateway-readings-post.posting.yaml  gateway-readings.posting.yaml  readings.posting.yaml  sensor-temperature-readings-get.posting.yaml  temperature-sensor-readings-get.posting.yaml  test-gateway-publish.posting.yaml  test-temperature-publish.posting.yaml
project-presentation/: README.md  final-report.md  presentation.md
project-presentation/media/: architecture.drawio  component_diagram.drawio  gateway-chart-ascii.txt
sqlite/: entrypoint.sh  init.sql
