[project]
name = "mesh-temperature-data-flaskapp"
version = "0.1.0"
description = "Minimal MQTT client to subscribe to ESP32-Gateway data, save it to SQLite and serve it via Flask"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "flask-mqtt>=1.2.1",
 "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.2"]
